I added translation for 2 images (+ translation for 1 sentence)

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -27,6 +27,7 @@
     <string name="your_homework_text">Д/з:</string>
     <string name="no_lessons_text">На сегодня нет уроков!</string>
     <string name="update_lesson_text">Обновить урок</string>
+    <string name="will_be_added_soon">Скоро будет…</string>
 
     <!-- Переменные дней недели -->
     <string name="monday_text">Понедельник</string>
